--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.1",
     "expo": "~52.0.37",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.7",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -27,7 +32,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-deck-swiper": "^2.0.17",
+    "react-native-flip-toggle-button": "^1.0.9",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13"
