--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "mine-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "devStart": "forever start -c nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1691.0",
-    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security",
-    "google-auth-library": "^9.15.1",
-    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "expo-server-sdk": "^3.10.0",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "express-ws": "^5.0.2",
+    "install": "^0.13.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
-    "nodemailer": "^6.9.15",
-    "pg": "^8.13.0",
+    "nodemailer": "^6.9.14",
+    "npm": "^10.8.3",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
     "pg-listen": "^1.7.0",
-    "websocket": "^1.0.35",
-    "ws": "^8.18.0"
+    "pgtools": "^1.0.1",
+    "postgres": "^3.4.3",
+    "sharp": "^0.33.2",
+    "stripe": "^14.25.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "eslint": "^8.51.0"
   }
 }
